# memo-sql-bot

./: .gitignore  README.md  main.py  memo.db  pyproject.toml  requirements.txt  starts.sql
src/: checks.py  error.py  help.py  memo.py  stats.py
